# SoftRender

./: .editorconfig  .gitignore  CMakeLists.txt
include/: Camera.h  Light.h  Material.h  Model.h  OBJ_Loader.h  Object.h  Ray.h  Render.h  Scene.h  Shader.h  Texture.h  Triangle.h  global.h  tools.h
src/: Camera.cpp  Object.cpp  Render.cpp  Scene.cpp  Shader.cpp  Triangle.cpp  tools.cpp
